centered submit button and tried to fix mobile layout issues

--- a/css/style.less
+++ b/css/style.less
@@ -80,6 +80,70 @@ body {
 input, textarea {
   outline: none;
 }
+progress {
+  /* Positioning */
+  position: fixed;
+  left: 0;
+  top: 0;
+
+  /* Dimensions */
+  width: 100%;
+  height: .75em;
+
+  /* Reset the apperance */  
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+
+  /* Get rid of the default border in Firefox/Opera. */
+  border: none;
+
+  /* For Firefox/IE10+ */
+  background-color: transparent;
+
+  /* For IE10+, color of the progress bar */
+  color: @hrBackground;
+}
+
+progress::-webkit-progress-bar {
+  background-color: transparent;
+}
+
+.flat::-webkit-progress-value {
+  background-color: red;
+}
+
+.flat::-moz-progress-bar {
+  background-color: red;
+}
+
+.single::-webkit-progress-value {
+  background-color: transparent;
+  background-image: -webkit-linear-gradient(left, transparent, @hrBackground);
+}
+
+.single::-moz-progress-bar {
+  background-color: transparent;
+  background-image: -moz-linear-gradient(left, transparent, @hrBackground);
+}
+
+.progress-container {
+  width: 100%;
+  background-color: transparent;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: .5em;
+  display: block;
+}
+
+.progress-bar {
+  background-color: red;
+  width: 50%;
+  display: block;
+  height: inherit;
+}
+
 .container {
   margin: 0 auto;
   width: 960px;
@@ -91,7 +155,7 @@ input, textarea {
   display: inline-block;
   padding: 6px 12px;
   margin-bottom: 0;
-  font-size: 1.2rem;
+  font-size: 2em;
   font-weight: 400;
   line-height: 1.42857143;
   text-align: center;
@@ -174,7 +238,8 @@ textarea.form-control{
   width: 97%;
 }
 .ss-navigate {
-  clear: both
+  clear: both;
+  text-align: center;
 }
 .form-error-arg {
   font-weight: bold
@@ -451,7 +516,7 @@ td.ss-rightlabel {
 .ss-q-title {
   display: block;
   font-weight: bold;
-  font-size: 1.1rem;
+  font-size: 24px; //1.5em;
   color: #fff;
   text-shadow: 0px 0px 1px rgba(217, 4, 107, 1);
 
